src/objects/Ven_Financial_Model_Data__c.object
<CustomObject>
    <description>Objekt zur Speicherung der monatlichen Plan- und Istwerte jedes KPIs des Investments.</description>
    <fields>
        <fullName>Financial_Model_Version__c</fullName>
        <description>Stellt die Verbindung zum übergeordneten Objekt her</description>
        <inlineHelpText>bitte Financial Model Version eintragen</inlineHelpText>
        <label>Financial Model Version</label>
        <referenceTo>Ven_Financial_Model_Version__c</referenceTo>
        <relationshipLabel>Financial Model Data</relationshipLabel>
        <relationshipName>Financial_Model_Data</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Performance_Indicator__c</fullName>
        <description>Stellt die Verbindung zu den KPIs her</description>
        <inlineHelpText>Wird automatisch befüllt bei Upload des Financial Models</inlineHelpText>
        <label>Key Performance Indicator</label>
        <referenceTo>Ven_Key_Performance_Indicator__c</referenceTo>
        <relationshipName>Financial_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Wird benötigt, um in Berichten die Datensätze nach Jahren gruppieren zu können. Wird in Layouts nicht angezeigt.</description>
        <formula>Month( Ven_Datum__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wird benötigt, um in Berichten die Datensätze nach Jahren gruppieren zu können. Wird in Layouts nicht angezeigt.</inlineHelpText>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_Datum__c</fullName>
        <description>Beinhlatet Tag, Monat und Jahr der KPI Werte</description>
        <inlineHelpText>Wird bei Upload eines Financial Models automatisch befüllt</inlineHelpText>
        <label>Datum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ven_Unit__c</fullName>
        <formula>Key_Performance_Indicator__r.Ven_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ven_Value__c</fullName>
        <description>Beinhaltet den Wert des KPI</description>
        <inlineHelpText>Beinhaltet den Wert des KPI</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_Write_protection_FMD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sperrt den Datensatz für automatische Updates</description>
        <inlineHelpText>wird automatisch gesetzt</inlineHelpText>
        <label>Write protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Wird benötigt, um in Berichten die Datensätze nach Jahren gruppieren zu können. Wird in Layouts nicht angezeigt.</description>
        <formula>TEXT(Year( Ven_Datum__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wird benötigt, um in Berichten die Datensätze nach Jahren gruppieren zu können. Wird in Layouts nicht angezeigt.</inlineHelpText>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Financial Model Data</label>
    <nameField>
        <label>Financial Model-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Model Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>